# courses-backend

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md
.cargo-husky/hooks/: commit-msg
.github/workflows/: deploy.yml
crates/commit-validator/: Cargo.toml
crates/data-scraper/: Cargo.toml
crates/data-scraper/scripts/: course_details.hurl
crates/data-scraper/src/: lib.rs
crates/data-scraper/src/courses/: first_pass.rs  line.rs  second_pass.rs
crates/database/: Cargo.toml
crates/database/src/: db.rs  lib.rs
crates/database/src/entities/: component.rs  component_reservation.rs  component_reservations.rs  components.rs  course.rs  courses.rs  evaluations.rs  instructor.rs  instructor_meeting.rs  instructor_meetings.rs  instructors.rs  meeting.rs  meetings.rs  mod.rs  prelude.rs  reservation.rs  reservations.rs
crates/database/src/services/: course.rs  mod.rs  query_course.rs  save_course.rs
crates/datafetcher/: Cargo.toml
crates/datafetcher/scripts/: course_details.hurl
crates/datafetcher/src/: lib.rs  main.rs  syllabi.rs  util.rs
crates/datafetcher/src/courses/: first_pass.rs  line.rs  second_pass.rs
crates/migration/src/: lib.rs  m20250709_add_indexes.rs  m20250709_create_all_tables.rs  m20250710_add_component_title_index.rs  m20250710_add_full_text_search_indexes.rs  m20250710_add_search_indexes.rs  m20250710_create_all_tables.rs  m20250710_create_tsvector_columns.rs
crates/models/: Cargo.toml
crates/models/src/: course_data.rs  days.rs  lib.rs  requisite.rs  reservation.rs  reservation_type.rs  syllabus_data.rs  units.rs
crates/server/: Cargo.toml  Dockerfile  README.md
crates/server/src/: doc.rs  main.rs
crates/server/src/dtos/: course.rs
crates/server/src/routes/: auth.rs  course.rs  health.rs  mod.rs  root.rs
crates/server/src/utils/: shutdown.rs
