[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
license = "MIT OR Apache-2.0"
authors = ["Anish Pallati <apallati@anish.land>"]

[workspace.dependencies]
dotenv_codegen = "0.15.0"
sea-orm = { version = "1.1.13", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
] }
serde = { version = "1.0.219", features = ["derive"] }
