[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
license = "MIT OR Apache-2.0"
authors = ["Anish Pallati <apallati@anish.land>"]

[workspace.dependencies]
chrono = { version = "0.4.40", features = ["serde"] }
dotenvy = "0.15.7"
sea-orm = { version = "1.1.13", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
