[package]
name = "data-scraper"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
chrono = { version = "0.4.40", features = ["serde"] }
csv = "1.3.1"
dotenv_codegen = "0.15.0"
hurl = "6.1.1"
models = { version = "0.1.0", path = "../models" }
rayon = "1.10.0"
scraper = "0.23.1"
serde = "1.0.219"
