[package]
name = "data-scraper"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
csv = "1.3.1"
dotenv_codegen = "0.15.0"
futures = "0.3.31"
hurl = "6.1.1"
models = { version = "0.1.0", path = "../models" }
rayon = "1.10.0"
reqwest = { version = "0.12.15", features = ["json", "rustls-tls"] }
serde = "1.0.219"
tokio = { version = "1.44.2", features = ["full"] }
