[package]
name = "database"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
chrono = { workspace = true }
dotenvy = { workspace = true }
models = { path = "../models", features = ["database"] }
sea-orm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
