[package]
name = "datafetcher"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
csv = "1.3.1"
dotenv_codegen = { workspace = true }
futures = "0.3.31"
hurl = "6.1.1"
lazy_static = "1.5.0"
models = { path = "../models" }
rayon = "1.10.0"
regex = "1.11.1"
reqwest = { version = "0.12.15", features = ["json", "rustls-tls"] }
scraper = "0.23.1"
serde = { workspace = true }
tokio = { version = "1.44.2", features = ["full"] }
