[package]
name = "models"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.40", features = ["serde"] }
sea-orm = { workspace = true }
serde = { workspace = true }
# pin the version of strum that sea-orm uses
strum = { version = "=0.26.3", features = ["derive"] }

[features]
default = []
database = []
