[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.3"
axum-server = { version = "0.7.2", features = ["tls-rustls"] }
dotenv_codegen = "0.15.0"
env_logger = "0.11.7"
log = "0.4.27"
tokio = { version = "1.44.1", features = ["rt-multi-thread", "signal"] }
tower = "0.5.2"
tower-oauth2-resource-server = "0.2.2"
utoipa = { version = "5.3.1", features = ["axum_extras"] }
utoipa-axum = "0.2.0"
