[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.3"
chrono = { workspace = true }
database = { path = "../database" }
dotenvy = { workspace = true }
env_logger = "0.11.7"
log = "0.4.27"
sea-orm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { version = "1.44.1", features = ["rt-multi-thread", "signal"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["compression-gzip", "compression-br", "compression-deflate"] }
tower-oauth2-resource-server = "0.2.2"
utoipa = { version = "5.3.1", features = ["axum_extras", "chrono", "uuid"] }
utoipa-axum = "0.2.0"
utoipa-swagger-ui = { version = "9.0.1", features = ["axum"] }
